--- a/NewTeacher/NewTeacher.csproj
+++ b/NewTeacher/NewTeacher.csproj
@@ -98,6 +98,12 @@
     <Compile Include="Team\TeamDiscuss.Designer.cs">
       <DependentUpon>TeamDiscuss.cs</DependentUpon>
     </Compile>
+    <Compile Include="Team\TeamView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Team\TeamView.Designer.cs">
+      <DependentUpon>TeamView.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="BaseForm.resx">
       <DependentUpon>BaseForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -128,6 +134,9 @@
     </Compile>
     <EmbeddedResource Include="Team\TeamDiscuss.resx">
       <DependentUpon>TeamDiscuss.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Team\TeamView.resx">
+      <DependentUpon>TeamView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
