--- a/StudentUser/StudentUser.csproj
+++ b/StudentUser/StudentUser.csproj
@@ -93,6 +93,12 @@
     <Compile Include="ViewRtsp.Designer.cs">
       <DependentUpon>ViewRtsp.cs</DependentUpon>
     </Compile>
+    <Compile Include="VLCPlayer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VLCPlayer.Designer.cs">
+      <DependentUpon>VLCPlayer.cs</DependentUpon>
+    </Compile>
     <Compile Include="VlcPlayerBase.cs" />
     <Compile Include="UserMainForm.cs">
       <SubType>Form</SubType>
@@ -138,6 +144,9 @@
     </Compile>
     <EmbeddedResource Include="ViewRtsp.resx">
       <DependentUpon>ViewRtsp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VLCPlayer.resx">
+      <DependentUpon>VLCPlayer.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
