--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -45,7 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Request\BaseRequest.cs" />
-    <Compile Include="Request\CreateTeamRequest.cs" />
+    <Compile Include="Request\TeamChatListRequest.cs" />
     <Compile Include="Request\LockScreenRequest.cs" />
     <Compile Include="Request\GroupChatRequest.cs" />
     <Compile Include="Request\PrivateChatRequest.cs" />
