--- a/NewTeacher/NewTeacher.csproj
+++ b/NewTeacher/NewTeacher.csproj
@@ -37,11 +37,17 @@
     <ApplicationIcon>ter.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CSkin">
-      <HintPath>..\..\..\..\..\DLL\CSkin\CSkin 4.0\CSkin.dll</HintPath>
-    </Reference>
+    <Reference Include="DevExpress.BonusSkins.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Data.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Printing.v16.2.Core, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Utils.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraBars.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraEditors.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,6 +57,8 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationClient" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseForm.cs">
@@ -65,23 +73,11 @@
     <Compile Include="CallForm.Designer.cs">
       <DependentUpon>CallForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="CSkinBaseForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="CSkinBaseForm.designer.cs">
-      <DependentUpon>CSkinBaseForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="fmEditTeamName.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="fmEditTeamName.Designer.cs">
       <DependentUpon>fmEditTeamName.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmNotify.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmNotify.designer.cs">
-      <DependentUpon>frmNotify.cs</DependentUpon>
     </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
@@ -92,6 +88,17 @@
     <Compile Include="OnlineInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Team\TeamDiscuss.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,28 +117,21 @@
     <EmbeddedResource Include="CallForm.resx">
       <DependentUpon>CallForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CSkinBaseForm.resx">
-      <DependentUpon>CSkinBaseForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="fmEditTeamName.resx">
       <DependentUpon>fmEditTeamName.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmNotify.resx">
-      <DependentUpon>frmNotify.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Team\TeamDiscuss.resx">
       <DependentUpon>TeamDiscuss.cs</DependentUpon>
     </EmbeddedResource>
@@ -174,174 +174,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\sysbtn_restore_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_restore_hover.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_restore_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_min_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_min_hover.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_min_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_max_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_max_hover.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_max_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_close_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_close_hover.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_close_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\ShadowPalace.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\set_icon.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\rt.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\rm.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\rb.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\noon.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\night.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\morning.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menu_btn_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menu_btn_highlight.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\main_7.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\main_6.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\main_5.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\main_4.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\main_3.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\main_2.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\main_1.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\lt.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\lm.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\lb.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icon_close_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icon_close_hover.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icon_close_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Full_close_normal.PNG" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Full_close_hover.PNG" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Full_close_down.PNG" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\btn_norml.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\btn_Mouse.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\btn_Down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\BackPalace1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\BackPalace.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\AxInterop.AXVLC.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\allbtn_highlight.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\allbtn_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\aio_setting_white_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\aio_setting_white_hover.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\aio_setting_white_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\aio_setting_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\aio_setting_hover.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\aio_setting_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\aio_head_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\afternoon.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\4.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\ter16.ico" />
-  </ItemGroup>
-  <ItemGroup>
+    <None Include="Resources\在线.png" />
+    <None Include="Resources\老师.png" />
+    <None Include="Resources\离线.png" />
+    <None Include="Resources\签到.png" />
+    <None Include="Resources\上课点名.png" />
+    <None Include="Resources\学生.png" />
+    <None Include="Resources\群聊.png" />
     <Content Include="ter.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
