--- a/vlctest/vlctest.csproj
+++ b/vlctest/vlctest.csproj
@@ -193,6 +193,12 @@
   <ItemGroup>
     <None Include="Resources\rt.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\老师.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\学生.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
