--- a/DXApplication1/DXApplication1/DXApplication1.csproj
+++ b/DXApplication1/DXApplication1/DXApplication1.csproj
@@ -41,6 +41,7 @@
     <Reference Include="DevExpress.XtraBars.v16.2" />
     <Reference Include="DevExpress.XtraGrid.v16.2" />
     <Reference Include="DevExpress.XtraLayout.v16.2" />
+    <Reference Include="DevExpress.XtraNavBar.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraPrinting.v16.2" />
     <Reference Include="DevExpress.Printing.v16.2.Core" />
     <Reference Include="System" />
@@ -83,6 +84,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="XtraForm1.resx">
+      <DependentUpon>XtraForm1.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
