--- a/SharedForms/SharedForms.csproj
+++ b/SharedForms/SharedForms.csproj
@@ -21,7 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -42,8 +42,11 @@
     <Reference Include="DevExpress.XtraBars.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraEditors.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraGrid.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraLayout.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraNavBar.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraPrinting.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraRichEdit.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraTreeList.v16.2, Version=16.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -77,17 +80,14 @@
     <Compile Include="MyButton.Designer.cs">
       <DependentUpon>MyButton.cs</DependentUpon>
     </Compile>
-    <Compile Include="MyListView.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="MyListView.Designer.cs">
-      <DependentUpon>MyListView.cs</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource1.resx</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\ChatItem.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="UserControls\sms.cs">
       <SubType>UserControl</SubType>
@@ -137,24 +137,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\main_6.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\main_5.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\main_4.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\main_3.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\main_2.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\main_1.jpg" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\lt.png" />
   </ItemGroup>
   <ItemGroup>
@@ -164,115 +146,7 @@
     <None Include="Resources\lb.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icon_close_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icon_close_hover.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icon_close_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Full_close_normal.PNG" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Full_close_hover.PNG" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Full_close_down.PNG" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\btn_norml.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\btn_Mouse.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\btn_Down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\BackPalace1.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\BackPalace.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\AxInterop.AXVLC.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\allbtn_highlight.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\allbtn_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\aio_setting_white_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\aio_setting_white_hover.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\aio_setting_white_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\aio_setting_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\aio_setting_hover.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\aio_setting_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\aio_head_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\afternoon.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\4.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_restore_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_restore_hover.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_restore_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_min_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_min_hover.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_min_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_max_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_max_hover.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_max_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_close_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_close_hover.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\sysbtn_close_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\ShadowPalace.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\set_icon.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\rt.png" />
@@ -284,34 +158,10 @@
     <None Include="Resources\rb.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\noon.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\night.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\morning.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menu_btn_normal.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\menu_btn_highlight.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\main_7.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\群聊 %283%29.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\所有人.png" />
+    <None Include="Resources\老师.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\学生.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\老师.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
