--- a/vlctest/packages.config
+++ b/vlctest/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DirectShowLib" version="1.0.0" targetFramework="net46" />
   <package id="Vlc.DotNet.Core" version="2.1.134" targetFramework="net46" />
   <package id="Vlc.DotNet.Core.Interops" version="2.1.134" targetFramework="net46" />
   <package id="Vlc.DotNet.Forms" version="2.1.134" targetFramework="net46" />
