--- a/NewTeacher/App.config
+++ b/NewTeacher/App.config
@@ -20,6 +20,9 @@
     <add key="screenState" value="0"/>
 
 
+    <add key="UploadFileServer" value="http://118.184.18.254:8080/edu-server/UploadFile"/>
+
+
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
