--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\ChatTeamInfo.cs" />
     <Compile Include="Views\TeamMember.cs" />
+    <Compile Include="Views\UploadResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
