--- a/NewTeacher/App.config
+++ b/NewTeacher/App.config
@@ -5,26 +5,33 @@
   <appSettings>
     <!-- 服务器IP-->
     <!--外网116.212.115.15-->
-    <add key="serverIP" value="118.184.18.254"/>
-    <add key="serverPort" value="8899"/>
-
+    <add key="serverIP" value="118.184.18.254" />
+    <add key="serverPort" value="8899" />
     <!-- 服务器端数据库信息-->
-    <add key="Database" value="netroom"/>
-    <add key="Table" value="userInfo"/>
-    <add key="User ID" value="root"/>
-    <add key="Password" value="root"/>
-
+    <add key="Database" value="netroom" />
+    <add key="Table" value="userInfo" />
+    <add key="User ID" value="root" />
+    <add key="Password" value="root" />
     <!-- ftp登录信息-->
-    <add key="FtpName" value="tony"/>
-    <add key="FtpPassword" value="123"/>
-    <add key="screenState" value="0"/>
-
-
-    <add key="UploadFileServer" value="http://118.184.18.254:8080/edu-server/UploadFile"/>
-
-
+    <add key="FtpName" value="tony" />
+    <add key="FtpPassword" value="123" />
+    <add key="screenState" value="0" />
+    <add key="UploadFileServer" value="http://118.184.18.254:8080/edu-server/UploadFile" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
