--- a/NewTeacher/App.config
+++ b/NewTeacher/App.config
@@ -4,8 +4,10 @@
   </configSections>
   <appSettings>
     <!-- 服务器IP-->
-    <!--外网116.212.115.15-->
+    <!--外网116.212.115.15,118.184.18.254-->
+    <!--本地：192.168.1.84-->
     <add key="serverIP" value="118.184.18.254"/>
+    <add key="RTSPserverIP" value="192.168.1.84"/>
     <add key="serverPort" value="8899"/>
 
     <!-- 服务器端数据库信息-->
