--- a/NewTeacher/App.config
+++ b/NewTeacher/App.config
@@ -7,6 +7,7 @@
     <!--外网116.212.115.15,118.184.18.254-->
     <!--本地：192.168.1.84-->
     <add key="serverIP" value="118.184.18.254"/>
+    <add key="UploadFileServer" value="http://118.184.18.254:8080/edu-server/UploadFile"/>
     <add key="RTSPserverIP" value="192.168.1.84"/>
     <add key="serverPort" value="8899"/>
 
