--- a/DXApplication1/DXApplication1/DXApplication1.csproj
+++ b/DXApplication1/DXApplication1/DXApplication1.csproj
@@ -120,6 +120,9 @@
   <ItemGroup>
     <None Include="Resources\rm.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\open_16x16.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
