--- a/StudentUser/App.config
+++ b/StudentUser/App.config
@@ -4,6 +4,8 @@
     <!-- 服务器IP-->
     <!--116.212.115.15,118.184.18.254-->
     <add key="serverIP" value="118.184.18.254"/>
+    <add key="UploadFileServer" value="http://118.184.18.254:8080/edu-server/UploadFile"/>
+    <add key="RTSPserverIP" value="139.196.217.92:10554"/>
     <add key="serverPort" value="8899"/>
 
     <!-- 服务器端数据库信息-->
