--- a/SharedForms/SharedForms.csproj
+++ b/SharedForms/SharedForms.csproj
@@ -191,6 +191,15 @@
   <ItemGroup>
     <None Include="Resources\打开文件.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\禁止.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\新消息24.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\禁止24.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
