--- a/StudentUser/App.config
+++ b/StudentUser/App.config
@@ -1,25 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <!-- 服务器IP-->
     <!--116.212.115.15,118.184.18.254-->
+    <!--通讯服务器-->
     <add key="serverIP" value="118.184.18.254"/>
-    <add key="UploadFileServer" value="http://118.184.18.254:8080/edu-server/UploadFile"/>
-    <add key="RTSPserverIP" value="139.196.217.92:10554"/>
+    <!--通讯服务器端口-->
     <add key="serverPort" value="8899"/>
-
-    <!-- 服务器端数据库信息-->
-    <add key="Database" value="netroom"/>
-    <add key="Table" value="userInfo"/>
-    <add key="User ID" value="root"/>
-    <add key="Password" value="root"/>
-
-    <!-- ftp登录信息-->
-    <add key="FtpName" value="tony"/>
-    <add key="FtpPassword" value="123"/>
-    <add key="screenState" value="0"/>
-
-
+    <!--文件上传服务器-->
+    <add key="UploadFileServer" value="http://118.184.18.254:8080/edu-server/UploadFile"/>
+    <!--音视频服务器(可以包含端口)-->
+    <!--139.196.217.92:10554-->
+    <add key="RTSPserverIP" value="118.184.18.254"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
