--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\ChatTeamInfo.cs" />
     <Compile Include="Views\ScreenCaptureInfo.cs" />
+    <Compile Include="Views\SendFileView.cs" />
     <Compile Include="Views\TeamMember.cs" />
     <Compile Include="Views\UploadResult.cs" />
   </ItemGroup>
