--- a/StudentUser/App.config
+++ b/StudentUser/App.config
@@ -11,6 +11,8 @@
     <!--音视频服务器(可以包含端口)-->
     <!--139.196.217.92:10554-->
     <add key="RTSPserverIP" value="118.184.18.254"/>
+    <!--UDP端口-->
+    <add key="UDPPort" value="10888"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
