--- a/StudentUser/App.config
+++ b/StudentUser/App.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+  </configSections>
   <appSettings>
     <!--116.212.115.15,118.184.18.254-->
     <!--通讯服务器-->
